calico-cloud_versioned_docs/version-3.16/image-assurance/overview.mdx
---
description: Choose a method to scan images for vulnerabilities.
---

# Choosing an image scanning method

## Big picture

Scan images and Kubernetes workloads for vulnerabilities using {{prodname}} Image Assurance.

## Value

{{prodname}} Image Assurances helps you identify vulnerabilities in workloads that you deploy to Kubernetes clusters. A vulnerability can be a weakness in an application (for example, a design flaw or an implementation bug) that allows attackers to cause additional harm. With Image Assurance you can:

- Scan an image for vulnerabilities
- Assess the impact of newly-found vulnerabilities and prioritize remediation efforts
- Create exceptions to ignore specific vulnerabilities
- Create alerts on high-severity vulnerabilities so you can delegate remediation efforts to the appropriate team
- Block non-compliant workloads using policy as part of your cloud-native security posture

## About Image Assurance

Image Assurance is based on the Common Vulnerabilities and Exposures (CVE) system, which provides a catalog of publicly-known security vulnerabilities and exposures. Known vulnerabilities are identified by a unique CVE ID based on the year it was reported (for example, CVE-2021-44228).

Scanned image content includes:

- Libraries and content (for example, python, ruby gems, jars and go)
- Packages (OS and non-OS)
- Image layer

## Image scanning methods

The Image Assurance scanner can be used to scan images using the following methods with the option to send results to the Manager UI.

| **Method**                                               | **What images? Where?**                                      | **Benefit**                                                  |
| -------------------------------------------------------- | ------------------------------------------------------------ | ------------------------------------------------------------ |
| Scan all images in a Kubernetes cluster                  | Any running image in the Kubernetes cluster including locally-built first-party images to fix critical bugs. | Provides defense-in-depth coverage and an easy way to get started with vulnerability scanning and remediation. |
| Integrate Image Assurance scanner in your build pipeline | Images in your application build pipeline and private registeries including:   <br />- Customer-built images<br />- Local images<br />- Third-party images from public registries (for example Kafka, reddis) | Incorporate the IA scanner as a lightweight runner in your build pipeline, and use the scanner offline and on-demand for ad hoc scanning and emergency patching. |

## Next steps

- [Scan all images in a Kubernetes cluster](./scanners/cluster-scanner.mdx)
- [Integrate Image Assurance scanner in your build pipeline](./scanners/pipeline-scanner.mdx)
